--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "firebase": "^10.13.0",
+    "gsap": "^3.12.5",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18"
